--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
     "name": "Myroslav Zastavnyi"
   },
   "version": "1.0",
+  "scripts": {
+    "dev": "echo\"Hello smart chatik\" && nodemon app.js"
+  },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cron": "^2.1.0",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "email-templates": "^10.0.1",
     "express": "^4.18.2",
@@ -13,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
     "nodemailer": "^6.8.0",
+    "nodemailer-express-handlebars": "^5.0.0",
     "nodemon": "^2.0.20",
     "pug": "^3.0.2"
   },
