--- a/.env
+++ b/.env
@@ -3,3 +3,12 @@ AWS_SECRET=63jhvfjdskh
 MONGO_URL=mongodb://127.0.0.1/test-project
 NO_REPLY_EMAIL=666omerta@gmail.com
 NO_REPLY_EMAIL_PASSWORD=jtvbiivdnilhqnbo
+
+TWILIO_ACCOUNT_SID=AC1595bad6ffdad8c3c84f39b9ba1ee812
+TWILIO_AUTH_TOKEN=88d848ac3401fa71384ae93012e850a7
+TWILIO_SERVICE_SID=MGbb558cfc963bdf3d00fcbaaf94f8b00f
+
+S3_BUCKET_NAME=node2.0
+S3_BUCKET_REGION=us-east-1
+S3_ACCESS_KEY_ID=AKIA56QEVMRCLWFGGVZ5
+S3_SECRET_ACCESS_KEY= 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
