--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ S3_BUCKET_NAME=node2.0
 S3_BUCKET_REGION=us-east-1
 S3_ACCESS_KEY_ID=AKIA56QEVMRCLWFGGVZ5
 S3_SECRET_ACCESS_KEY= 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
+S3_BUCKET_URL=s3://node2.0/1517287843259.jpg
